# script.elementum.jackett

./: pyproject.toml
src/: client.py  debugger.py  filter.py  jackett.py  utils.py
